# pgmanage

./: .pre-commit-config.yaml  AUTHORS  AUTHORS.md  BUILD.md  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
OmniDB/OmniDB_app/views/: memory_objects.py  monitor_dashboard.py  polling.py
deploy/app/: index.html
deploy/linux/tarbuild/: Dockerfile  entrypoint.sh
deploy/macosx/: README.md  deploy.sh
deploy/windows/: deploy.sh  license.txt
pgmanage/: pgmanage-lin.spec  pgmanage-mac.spec  pgmanage-server.py  pgmanage-win.spec
pgmanage/app/: serializers.py  urls.py
pgmanage/app/bgjob/: jobs.py  process_executor.py
pgmanage/app/client_manager/: client_manager.py
pgmanage/app/file_manager/: file_manager.py
pgmanage/app/include/: Session.py
pgmanage/app/migrations/: 0021_group_unique_user_group_name.py  0026_alter_monwidgets_script_chart.py  0026_connection_pinned_databases.py  0026_erdlayout.py  0027_erdlayout.py  0028_merge_20250821_0702.py  0029_auto_20250904_1353.py  0030_populate_mssql-technology.py  0031_userdetails_show_system_catalogs.py
pgmanage/app/models/: main.py
pgmanage/app/tests/: test_commands_history.py  test_configuration.py  test_connection.py  test_monitoring_dashboard.py  test_pgextras.py  test_postgresql12.py  test_tree_snippets.py  test_views.py  utils_testing.py
pgmanage/app/utils/: conf.py  decorators.py
pgmanage/app/views/: __init__.py  backup.py  commands_history.py  connections.py  login.py  monitor_dashboard.py  monitoring_dashboard.py  pgextras.py  plugins.py  polling.py  (+9 more)
pgmanage/pgmanage/: settings.py  urls.py
(+279 files in other folders)
