[tool.poetry]
name = "pgmanage"
version = "1.0.0"
description = "Database management tool"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.13"
cryptography = "45.0.5"
django = "4.2.23"
openpyxl = "3.1.3"
restrictedpython = "8.0"
pymysql = "1.1.1"
sshtunnel = "0.4.0"
cherrypy = "18.10.0"
psycopg2 = "2.9.10"
pgspecial = "1.13.0"
psutil = "6.1.1"
oracledb = "3.2"
django-vite = "3.0.4"
sqlparse = "0.5.3"
portend = "3.1"
tempora = "5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
